--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shalimar Paints</title>
+    <title>nestle</title>
     <meta
       name="og:title"
-      content="Shalimar Paints AI Talking Brochure – Powered by HiVoco Studios"
+      content="nestle AI Talking Brochure – Powered by HiVoco Studios"
     />
     <meta
       name="og:description"
@@ -14,7 +14,7 @@
     />
     <meta
       name="og:keywords"
-      content="Shalimar Paints AI, Shalimar Paints, Shalimar, Interact with your brochure in your language, Ask features, Choose colours &  finishes, Find Dealers & Painters, Play & Win"
+      content="nestle AI, nestle, Shalimar, Interact with your brochure in your language, Ask features, Choose colours &  finishes, Find Dealers & Painters, Play & Win"
     />
     <meta name="og:author" content="HiVOCO Team" />
 
