--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta
       name="og:keywords"
-      content="nestle AI, nestle, Shalimar, Interact with your brochure in your language, Ask features, Choose colours &  finishes, Find Dealers & Painters, Play & Win"
+      content="nestle AI, nestle, Nestle, Interact with your brochure in your language, Ask features, Choose colours &  finishes, Find Dealers & Painters, Play & Win"
     />
     <meta name="og:author" content="HiVOCO Team" />
 
